--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <h1 class="name">Shriya Tyagi</h1>
       <p class="tagline">Electrical Engineering • University of Waterloo</p>
       <ul class="contact">
-        <li><a href="tel:+15482559727">+1&nbsp;(548)&nbsp;255-9727</a></li>
         <li><a href="mailto:s32tyagi@uwaterloo.ca" rel="me">s32tyagi@uwaterloo.ca</a></li>
         <li><a href="https://linkedin.com/in/shriya-t" target="_blank" rel="noopener">linkedin.com/in/shriya-t</a></li>
       </ul>
@@ -36,7 +35,7 @@
   <main id="content" class="container" role="main">
     <section id="about" class="about">
       <h2>About</h2>
-      <p>Curious builder focused on embedded systems, optimization, and practical electronics. Comfortable hopping between Python, C++, and the soldering iron. Always optimizing for clarity, reliability, and impact.</p>
+      <p>The Website.</p>
     </section>
 
     <section id="skills" class="cards">
@@ -45,7 +44,7 @@
         <article class="card">
           <h3>Coding Languages</h3>
           <ul>
-            <li>Python (NumPy, OR-Tools, datetime)</li>
+            <li>Python ( Google OR-Tools, datetime, beautifulsoup, NumPy, Scikit Learn)</li>
             <li>C++</li>
             <li>HTML/CSS</li>
           </ul>
@@ -53,9 +52,9 @@
         <article class="card">
           <h3>Tools</h3>
           <ul>
-            <li>KiCAD (basic)</li>
+            <li>KiCAD</li>
             <li>VS Code</li>
-            <li>Excel, MS Office</li>
+            <li>Excel, Access, MS Office</li>
             <li>Visual Studio, PyCharm, Eclipse</li>
           </ul>
         </article>
@@ -63,7 +62,6 @@
           <h3>Certifications</h3>
           <ul>
             <li>DELF B2</li>
-            <li>IELTS 8.5/9</li>
           </ul>
         </article>
       </div>
@@ -72,96 +70,6 @@
     <section id="projects">
       <h2>Projects</h2>
 
-      <article class="item">
-        <header>
-          <h3>Timetable Generator</h3>
-          <div class="meta">
-            <span>Python, OR-Tools, Datetime</span>
-            <span>Aug 2025 – Sept 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Scalable school timetable generator using CP-SAT to optimize hard and soft constraints.</li>
-          <li>Constraint formulations for clashes, room availability, and instructor schedules.</li>
-          <li>Ensures fairness, balanced workloads, and compliance with institutional rules.</li>
-        </ul>
-      </article>
-
-      <article class="item">
-        <header>
-          <h3>Mini Racing Car (Design Team Event)</h3>
-          <div class="meta">
-            <span>Arduino, ESP8266, DRV8833</span>
-            <span>Sept 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Miniature car with ESP8266 and DRV8833 for wireless dual-motor control.</li>
-          <li>Developed C++ firmware enabling Wi-Fi remote control.</li>
-          <li>Rapid prototyping, soldering, and iterative testing under tight timelines.</li>
-        </ul>
-      </article>
-
-      <article class="item">
-        <header>
-          <h3>Physics Project — Analysis of Photodiodes</h3>
-          <div class="meta">
-            <span>Semiconductor behavior research</span>
-            <span>Sept 2024 – Feb 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Built test circuit and analyzed efficiency, response time, and wavelength sensitivity.</li>
-          <li>Examined dark current, junction capacitance, and noise effects on signal integrity.</li>
-        </ul>
-      </article>
-    </section>
-
-    <section id="experience">
-      <h2>Experience</h2>
-
-      <article class="item">
-        <header>
-          <h3>Journalist / Recruitment Coordinator</h3>
-          <div class="meta">
-            <span>ThatBenzeneRing, DOTx</span>
-            <span>Delhi, IN | May 2023 – May 2024</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Produced and improved editorial content for a startup news platform.</li>
-          <li>Led recruitment and streamlined Excel-based candidate databases.</li>
-        </ul>
-      </article>
-
-      <article class="item">
-        <header>
-          <h3>Donation and Afforestation Drives</h3>
-          <div class="meta">
-            <span>Sector 122, RWA</span>
-            <span>Noida, IN | 2022 – 2024</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Led donation and tree plantation drives with local RWA.</li>
-          <li>Managed logistics to maximize outreach while minimizing waste.</li>
-        </ul>
-      </article>
-
-      <article class="item">
-        <header>
-          <h3>Organizer, Science Workshop</h3>
-          <div class="meta">
-            <span>Delhi Public School, Noida</span>
-            <span>Jun 2023 – Dec 2023</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Organized a large-scale biology workshop engaging ~4,000 middle school students.</li>
-          <li>Coordinated with educators and delivered interactive, curriculum-aligned content.</li>
-        </ul>
-      </article>
-    </section>
 
     <section id="education">
       <h2>Education</h2>
