--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shriya Tyagi — Electrical Engineering</title>
+  <title>Shriya Tyagi — Electrical Engineering 🪿🪿🪿</title>
   <meta name="description" content="Portfolio and resume site for Shriya Tyagi, Electrical Engineering student at the University of Waterloo.">
   <meta property="og:title" content="Shriya Tyagi — Electrical Engineering">
   <meta property="og:description" content="Projects, experience, and skills.">
