--- a/index.html
+++ b/index.html
@@ -26,85 +26,69 @@
       <h2>About</h2>
       <p>The Website.</p>
     </section>
+<section id="projects">
+  <h2>Projects</h2>
 
-    <section id="skills" class="cards">
-      <h2>Technical Skills</h2>
-      <div class="card-grid">
-        <article class="card">
-          <h3>Coding Languages</h3>
-          <ul>
-            <li>Python (NumPy, OR-Tools, datetime)</li>
-            <li>C++</li>
-            <li>HTML/CSS</li>
-          </ul>
-        </article>
-        <article class="card">
-          <h3>Tools</h3>
-          <ul>
-            <li>KiCAD (basic)</li>
-            <li>VS Code</li>
-            <li>Excel, MS Office</li>
-            <li>Visual Studio, PyCharm, Eclipse</li>
-          </ul>
-        </article>
-        <article class="card">
-          <h3>Certifications</h3>
-          <ul>
-            <li>DELF B2</li>
-            <li>IELTS 8.5/9</li>
-          </ul>
-        </article>
+  <article class="item">
+    <header>
+      <h3>Timetable Generator</h3>
+      <div class="meta">
+        <span>Python, OR-Tools, Datetime</span>
+        <span>Aug 2025 – Sept 2025</span>
       </div>
-    </section>
+    </header>
+    <ul class="bullets">
+      <li>Scalable school timetable generator using CP-SAT to optimize hard and soft constraints.</li>
+      <li>Constraint formulations for clashes, room availability, and instructor schedules.</li>
+      <li>Ensures fairness, balanced workloads, and compliance with institutional rules.</li>
+    </ul>
+  </article>
 
-    <section id="projects">
-      <h2>Projects</h2>
+  <article class="item">
+    <header>
+      <h3>Plagiarism Detector</h3>
+      <div class="meta">
+        <span>Python, Scikit-learn, NLTK, Requests, BeautifulSoup</span>
+        <span>Aug 2025 – Sept 2025</span>
+      </div>
+    </header>
+    <ul class="bullets">
+      <li>Developed a text similarity system using TF-IDF vectorization and cosine similarity to detect plagiarism in academic and technical documents.</li>
+      <li>Implemented preprocessing pipelines with NLTK for tokenization, stopword removal, and keyword extraction.</li>
+      <li>Optimized workflows for scalable analysis of complex text datasets, improving detection accuracy and efficiency.</li>
+    </ul>
+  </article>
 
-      <article class="item">
-        <header>
-          <h3>Timetable Generator</h3>
-          <div class="meta">
-            <span>Python, OR-Tools, Datetime</span>
-            <span>Aug 2025 – Sept 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Scalable school timetable generator using CP-SAT to optimize hard and soft constraints.</li>
-          <li>Constraint formulations for clashes, room availability, and instructor schedules.</li>
-          <li>Ensures fairness, balanced workloads, and compliance with institutional rules.</li>
-        </ul>
-      </article>
+  <article class="item">
+    <header>
+      <h3>Mini Racing Car (Design Team Event)</h3>
+      <div class="meta">
+        <span>Arduino, ESP8266, DRV8833</span>
+        <span>Sept 2025</span>
+      </div>
+    </header>
+    <ul class="bullets">
+      <li>Miniature car with ESP8266 and DRV8833 for wireless dual-motor control.</li>
+      <li>Developed C++ firmware enabling Wi-Fi remote control.</li>
+      <li>Rapid prototyping, soldering, and iterative testing under tight timelines.</li>
+    </ul>
+  </article>
 
-      <article class="item">
-        <header>
-          <h3>Mini Racing Car (Design Team Event)</h3>
-          <div class="meta">
-            <span>Arduino, ESP8266, DRV8833</span>
-            <span>Sept 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Miniature car with ESP8266 and DRV8833 for wireless dual-motor control.</li>
-          <li>Developed C++ firmware enabling Wi-Fi remote control.</li>
-          <li>Rapid prototyping, soldering, and iterative testing under tight timelines.</li>
-        </ul>
-      </article>
-
-      <article class="item">
-        <header>
-          <h3>Physics Project — Analysis of Photodiodes</h3>
-          <div class="meta">
-            <span>Semiconductor behavior research</span>
-            <span>Sept 2024 – Feb 2025</span>
-          </div>
-        </header>
-        <ul class="bullets">
-          <li>Built test circuit and analyzed efficiency, response time, and wavelength sensitivity.</li>
-          <li>Examined dark current, junction capacitance, and noise effects on signal integrity.</li>
-        </ul>
-      </article>
-    </section>
-
+  <article class="item">
+    <header>
+      <h3>Physics Project — Analysis of Photodiodes</h3>
+      <div class="meta">
+        <span>Semiconductor behavior research</span>
+        <span>Sept 2024 – Feb 2025</span>
+      </div>
+    </header>
+    <ul class="bullets">
+      <li>Built test circuit and analyzed efficiency, response time, and wavelength sensitivity.</li>
+      <li>Examined dark current, junction capacitance, and noise effects on signal integrity.</li>
+    </ul>
+  </article>
+</section>
+  
     <section id="experience">
       <h2>Experience</h2>
 
