--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Shriya Tyagi <span class="goose">🪿</span></h1>
+    <h1>Shriya Tyagi</h1>
     <nav>
       <ul>
         <li><a href="#skills">Skills</a></li>
