--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shriya Tyagi </title>
+  <title>Shriya Tyagi <span class="goose">🪿 honk.</span></title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="goose.png">
 </head>
