Fix footer copyright text formatting

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
     <footer class="site-footer">
-      <p>&copy; <span id="year"></span> 2025 Shriya Tyagi <span class="goose">🪿 honk.</span></p>
+      <p>&copy; <span id="year"></span> 2025 Shriya Tyagi honk.</span></p>
     </footer>
   </main>
 
