--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="emoji" style="font-size: 3rem">🪿</div>
     <h1 class="name">Shriya Tyagi</h1>
-    <p class="tagline">The most honkable collection of stuff ever made.</p>
+    <p class="tagline">🪿🪿🪿🪿🪿🪿🪿🪿🪿🪿</p>
   </header>
 
   <nav>
@@ -21,16 +21,6 @@
       <li><a href="#education">Education</a></li>
     </ul>
   </nav>
-
-  <main class="container">
-    <section id="contents">
-      <h2>Contents</h2>
-      <ul>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#education">Education</a></li>
-      </ul>
-    </section>
 
     <section id="projects">
       <h2> Projects</h2>
