Reduce tagline emoji count in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="emoji" style="font-size: 3rem">🪿</div>
     <h1 class="name">Shriya Tyagi</h1>
-    <p class="tagline">🪿🪿🪿🪿🪿🪿🪿🪿🪿🪿</p>
+    <p class="tagline">🪿</p>
   </header>
 
   <nav>
