--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goose Projects</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    main.container {
+      width: 100%;
+      max-width: var(--maxw);
+      padding: 0 20px;
+    }
+  </style>
 </head>
 <body>
   <header class="site-header">
-    <div class="emoji" style="font-size: 3rem">🪿</div>
-    <h1 class="name">Shriya Tyagi</h1>
-    <p class="tagline">🪿</p>
+    <div class="emoji" style="font-size: 3rem">🪿✨</div>
+    <h1 class="name">Extremely Lazy Goose: Shriya Tyagi</h1>
+    <p class="tagline">The most honkable collection of stuff ever made.</p>
   </header>
 
   <nav>
