Remove emoji sparkle and update header title

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="emoji" style="font-size: 3rem">🪿✨</div>
-    <h1 class="name">Extremely Lazy Goose: Shriya Tyagi</h1>
+    <div class="emoji" style="font-size: 3rem">🪿</div>
+    <h1 class="name">Shriya Tyagi</h1>
     <p class="tagline">The most honkable collection of stuff ever made.</p>
   </header>
 
