Add links to project titles in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <article class="item">
 <header>
-<h3>Timetable Generator</h3>
+<h3><a href="timetable.html" class="project-link">Timetable Generator</a></h3>
 <div class="meta">
 <span>Python, OR-Tools, Datetime</span>
 <span>Aug 2025 – Sept 2025</span>
@@ -56,7 +56,7 @@
 
 <article class="item">
 <header>
-<h3>Plagiarism Detector</h3>
+<h3><a href="plagiarism.html" class="project-link">Plagiarism Detector</a></h3>
 <div class="meta">
 <span>Python, Scikit-learn, NLTK, Requests, BeautifulSoup</span>
 <span>Aug 2025 – Sept 2025</span>
@@ -71,7 +71,7 @@
 
 <article class="item">
 <header>
-<h3>Mini Racing Car (Design Team Event)</h3>
+<h3><a href="racingcar.html" class="project-link">Mini Racing Car (Design Team Event)</a></h3>
 <div class="meta">
 <span>Arduino, ESP8266, DRV8833</span>
 <span>Sept 2025</span>
@@ -86,7 +86,7 @@
 
 <article class="item">
 <header>
-<h3>Physics Project — Analysis of Photodiodes</h3>
+<h3><a href="photodiode.html" class="project-link">Physics Project — Analysis of Photodiodes</a></h3>
 <div class="meta">
 <span>Semiconductor behavior research</span>
 <span>Sept 2024 – Feb 2025</span>
