Update name and add emoji in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <strong><a href="/">shriya</a></strong> <span id="greet">¯\_(ツ)_/¯</span>
+  <strong>Shriya Tyagi 🪿</strong>
 
   <br><br>
   <div id="content">
